@@ -626,14 +626,7 @@ print (t)\
   %{!?_rpmdb_rebuild:%{__dbi_btconfig_current}}\
 %{nil}
 
-# The list of tags for which indices will be built.
-%_dbi_tags	Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filemd5s:Depends:Pubkeys:Packagecolor
-
-# "Packages" should have shared/exclusive fcntl(2) lock using "lockdbfd".
-%_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
-
-# "Depends" is a per-transaction cache of known dependency resolutions.
-%_dbi_config_Depends		%{_dbi_htconfig} temporary private
+%_dbi_tags      Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filemd5s:Depends:Pubkeys:Packagecolor
 
 %_dbi_config_Dirnames		%{_dbi_btconfig}
 %_dbi_config_Requireversion	%{_dbi_btconfig}
@@ -641,7 +634,27 @@ print (t)\
 %_dbi_config_Installtid		%{_dbi_btconfig}
 %_dbi_config_Removetid		%{_dbi_btconfig}
 
-%_dbi_config	%{_dbi_htconfig}
+%_dbi_config_Basenames		%{_dbi_btconfig}
+%_dbi_config_Conflictname	%{_dbi_btconfig}
+%_dbi_config_Filedigests	%{_dbi_htconfig}
+%_dbi_config_Group		%{_dbi_btconfig}
+%_dbi_config_Name		%{_dbi_btconfig}
+%_dbi_config_Packagecolor	%{_dbi_htconfig}
+%_dbi_config_Providename	%{_dbi_btconfig}
+%_dbi_config_Pubkeys		%{_dbi_htconfig}
+%_dbi_config_Requirename	%{_dbi_btconfig}
+%_dbi_config_Sha1header		%{_dbi_htconfig}
+%_dbi_config_Sigmd5		%{_dbi_htconfig}
+%_dbi_config_Triggername	%{_dbi_btconfig}
+
+# "Packages" should have shared/exclusive fcntl(2) lock using "lockdbfd".
+%_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
+
+# "Depends" is a per-transaction cache of known dependency resolutions.
+%_dbi_config_Depends		%{_dbi_btconfig} temporary private
+
+# The default database configuration to use
+%_dbi_config    %{_dbi_btconfig}
 
 # XXX legacy configuration.
 # Choose db interface:
